---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 9
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/call_node.rb
---
foo
foo
foo(bar)
foo(
  bar,
  baz,
  bazz,
  bar,
  baz,
  bazz,
  bar,
  baz,
  bazz,
  a: bar, b: baz, c: bazz
)
foo.+@
foo.+(bar)
foo.bar
foo&.bar
foo.|(bar)
foo.^(bar)
foo.&(bar)
foo.<=>(bar)
foo.==(bar)
foo.===(bar)
foo.=~(bar)
foo.>(bar)
foo.>=(bar)
foo.<(bar)
foo.<=(bar)
foo.<<(bar)
foo.>>(bar)
foo.+(bar)
foo.-(bar)
foo.*(bar)
foo./(bar)
foo.%(bar)
foo.**(bar)
foo(bar.~)
foo.+@
foo.-@
foo.[](bar)
foo.[]=(bar, baz)
not implemented: "ruby_prism::bindings::XStringNode"
foo.!
foo.!=(bar)
foo.!~(bar)
foo += bar
foo -= bar
foo *= bar
foo /= bar
foo %= bar
foo **= bar
foo &= bar
foo |= bar
foo ^= bar
foo <<= bar
foo >>= bar
foo &&= bar
foo ||= bar
foo(&bar)&bar
foo(bar, &baz)&baz
foo{
  puts(
    not implemented: "ruby_prism::bindings::StringNode"
  )
}
foo{ |x| x.*(2) }
foo(bar){ |a, b| p([a, b]) }
foo{
  |not implemented: "ruby_prism::bindings::MultiTargetNode"|
  p(a, b)
}
foo.bar{ |v| v }
foo&.bar{ |v| v }
foo(&proc_obj)&proc_obj
foo && bar
foo && bar
not implemented: "ruby_prism::bindings::OrNode"
not implemented: "ruby_prism::bindings::OrNode"
foo.!
foo.!
